--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
 		"next-env.d.ts",
 		"**/*.ts",
 		"**/*.tsx",
-		".next/types/**/*.ts",
+		".next/types/**/*.ts", "src/app/api/copilot/route.ts",
 	],
 	"exclude": [
 		"node_modules"
